# geo-biodiversity-dataset

./: .gitignore  README.md  cfg.yaml  environment.yml  pyproject.toml  setup.ps1  setup.sh
cache/: species_cache.pkl
dataset/sat/csv/: combined.csv
dataset/sat/csv/seperate/: Birmingham.csv  London.csv  Manchester.csv
dataset/sat/raw/Birmingham/: tile_52.36535600348027_-1.7391590282328864.tif  tile_52.36535600348027_-1.7612938375580909.tif  tile_52.36535600348027_-1.7834286468832954.tif  tile_52.36535600348027_-1.8055634562085.tif  tile_52.36535600348027_-1.8276982655337044.tif  tile_52.36535600348027_-1.849833074858909.tif  tile_52.36535600348027_-1.8719678841841134.tif  tile_52.36535600348027_-1.8941026935093181.tif  tile_52.36535600348027_-1.9162375028345227.tif  tile_52.36535600348027_-1.9383723121597272.tif  tile_52.36535600348027_-1.9605071214849317.tif  tile_52.36535600348027_-1.9826419308101362.tif  tile_52.36535600348027_-2.0047767401353407.tif  tile_52.36535600348027_-2.026911549460545.tif  tile_52.36535600348027_-2.0490463587857497.tif  tile_52.36535600348027_-2.071181168110954.tif  tile_52.36535600348027_-2.0933159774361587.tif  tile_52.36535600348027_-2.1154507867613637.tif  tile_52.36535600348027_-2.137585596086568.tif  tile_52.36535600348027_-2.1597204054117727.tif  tile_52.36535600348027_-2.181855214736977.tif  tile_52.37886951699379_-1.8055634562085.tif  (+419 more)
gbio/: config.yml
gbio/src/: cache.py  gbif_query.py  landcover.py  process.py  sentinel_query.py  workingquery.py
gbio/src/parse/: yaml.py
scripts/notebooks/: generate.ipynb  sattelites.ipynb
(+1440 files in other folders)
