[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbio"
version = "1.0"
description = "Dataset parser combining geofenced sattelite images with biodiversity data queries."
authors = [{name = "Christopher Pukas", email = "cp824@ic.ac.uk"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text="MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
